<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <TextView
            android:id="@+id/alphaTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alpha_txt" />

        <SeekBar
            android:id="@+id/alphaSb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red" >

        <TextView
            android:id="@+id/redTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_txt" />

        <SeekBar
            android:id="@+id/redSb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green" >

        <TextView
            android:id="@+id/greenTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green_txt" />

        <SeekBar
            android:id="@+id/greenSb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue" >

        <TextView
            android:id="@+id/blueTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue_txt" />

        <SeekBar
            android:id="@+id/blueSb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_txt" />

        <SeekBar
            android:id="@+id/brushsizeSb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100" />

    </LinearLayout>

    <Button
        android:id="@+id/doneBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_txt" />

</LinearLayout>
